--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.4.2",
     "mongoose": "^5.11.15",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socket.io": "^3.1.1"
   }
 }
