--- a/front/package.json
+++ b/front/package.json
@@ -27,6 +27,7 @@
     "react-resizable-box": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "socket.io-client": "^3.1.1",
     "styled-components": "^5.2.0"
   },
   "scripts": {
